# LichtFeld-Studio

.github/workflows/: ubuntu.yml
docs/development/: vulkan-elite-roadmap.md  vulkan-rendering-pipeline.md
src/core/: argument_parser.cpp  checkpoint_format.cpp
src/core/include/core/: parameters.hpp
src/python/lfs/: py_keymap.cpp
src/python/lfs_plugins/: asset_index.py  asset_manager_integration.py  asset_manager_panel.py  import_panels.py  input_settings_panel.py
src/python/stubs/lichtfeld/: keymap.pyi
src/python/stubs/lichtfeld/ui/: __init__.pyi
src/rendering/: cuda_vulkan_interop.cpp  cuda_vulkan_interop.hpp
src/rendering/include/rendering/: frame_contract.hpp
src/rendering/rasterizer/: CMakeLists.txt
src/rendering/rasterizer/vulkan/: CMakeLists.txt
src/rendering/rasterizer/vulkan/shader/src/slang/: alphablend_shader.slang  tile_batch_shader.slang  utils.slang  vertex_shader.slang
src/rendering/rasterizer/vulkan/src/: buffer.cpp  buffer.h  gs_pipeline.cpp  gs_renderer.cpp  gs_renderer.h
src/training/: checkpoint.cpp  trainer.cpp
src/training/rasterization/fastgs/optimizer/include/: adam.h  adam_api.h
src/visualizer/: CMakeLists.txt
src/visualizer/gui/: gui_manager.cpp  native_panels.cpp  scene_panel_native.cpp  scene_panel_native.hpp  vulkan_ui_texture.cpp
src/visualizer/gui/resources/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/gui/rmlui/: rmlui_vk_backend.hpp
src/visualizer/gui/rmlui/elements/: scene_graph_element.cpp  scene_graph_element.hpp
src/visualizer/gui/rmlui/resources/: asset_manager.rcss  asset_manager.rml  watch_dirs_dialog.rcss  watch_dirs_dialog.rml
src/visualizer/input/: input_bindings.cpp  input_bindings.hpp  input_controller.cpp
src/visualizer/rendering/: point_cloud_vulkan_renderer.cpp  rendering_manager.hpp  rendering_manager_viewport.cpp  rendering_manager_vulkan.cpp  vksplat_input_packer.cpp  vksplat_input_packer.hpp  vksplat_input_packer_cuda.cu  vksplat_input_packer_cuda.hpp  vksplat_viewport_renderer.cpp  vksplat_viewport_renderer.hpp
src/visualizer/rendering/passes/: vulkan_depth_blit_pass.cpp  vulkan_environment_pass.cpp  vulkan_mesh_pass.cpp  vulkan_split_view_pass.cpp  vulkan_viewport_pass.cpp
src/visualizer/window/: vulkan_barrier2.hpp  vulkan_context.cpp  window_manager.cpp  window_manager.hpp
tests/: CMakeLists.txt  test_argument_parser.cpp  test_fastgs_kernels.cpp  test_input_controller_focus.cpp  test_vksplat_input_packer.cpp
tests/python/: test_asset_manager_panel.py  test_import_dialog_panels.py  test_input_settings_panel.py  test_vksplat_orthographic_regressions.py
